--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "dmstr/yii2-adminlte-asset": "^2.1",
         "bailangzhan/yii2-webuploader": "dev-master",
-        "mdmsoft/yii2-admin": "~2.0"
+        "mdmsoft/yii2-admin": "~2.0",
+        "gregwar/captcha": "1.*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
